# ExecutiveDashboard_

./: .gitignore  README.md  app.py  dashboard_data.db  main.py  pyproject.toml
utils/: __init__.py  data_processor.py  data_storage.py  database.py  forecasting.py  sample_data.py  scenario_modeling.py  visualizations.py
