[project]
name = "executive-boardroom"
version = "1.0.0"
description = "Executive Business Performance Dashboard"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "prophet>=1.2.1",
    "psycopg2-binary>=2.9.11",
    "reportlab>=4.4.5",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "statsmodels>=0.14.5",
    "streamlit>=1.51.0",
]
